# edncxx

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  banner.txt
edn-test/: CMakeLists.txt  tst_one.h
edn-test/edn101/: CMakeLists.txt  tst_scalars.cpp
ednpp-test/: CMakeLists.txt  main.cpp  tst_blah.h
include/edncxx/: ednany.h  ednreader.h  utf8cvt.h  utf8reader.h
scalars/: CMakeLists.txt  main.cpp  tst_niltest.h
src/: CMakeLists.txt  ednany.cpp  ednreader.cpp  utf8cvt.cpp  utf8reader.cpp
tests/: CMakeLists.txt  dummy.cpp  ednreader.cpp  ednreader_test.cpp  utf8cvt_test.cpp  utf8reader.cpp  utf8reader_test.cpp
